<resources>
    <string name="app_name">Música</string>
    <!-- botones superiores-->
    <string name="aleatorio_btn">Aleatorio</string>
    <string name="favoritos_btn">Favoritos</string>
    <string name="playlist_btn">Lista de Reproduccion</string>
    <string name="pistas_btn">Pistas</string>
    <string name="albumes_btn">Álbumes</string>
    <string name="artistas_btn">Artistas</string>
    <string name="carpetas_btn">Carpetas</string>
    <string name="año_btn">Año</string>

    <!-- otros-->
    <string name="total_songs">Todas las Canciones</string>
    <string name="reproduciendo_musica">Reproduciendo musica</string>
    <string name="back_btn">Back</string>
    <string name="shufle_btn">Aleatorio</string>
    <string name="repetir_btn">Repetir</string>

    <!-- player activity-->
    <string name="nombre_cancion">Nombre de la Cancion</string>
    <string name="nombre_artista">Nombre del Artista</string>
    <string name="stat_tv">00:00</string>
    <string name="end_tv">Loading…</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- nav-->
    <string name="app_icon">Icon</string>
    <string name="text_nav">Bienvenidos a\nMusica</string>
    <string name="feedback">Comentario</string>
    <string name="settings">Configuración</string>
    <string name="about">Nosotros</string>
    <string name="exit">Salir</string>


</resources>