<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<!--    para botones-->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbarAlwaysDrawVerticalTrack="false">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/aleatorio_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/aleatorio_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:contentDescription="@string/favoritos_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/favoritos_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:contentDescription="@string/playlist_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/playlist_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:contentDescription="@string/pistas_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/pistas_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:contentDescription="@string/albumes_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/albumes_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:contentDescription="@string/artistas_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/artistas_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:contentDescription="@string/carpetas_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/carpetas_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:contentDescription="@string/año_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/año_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_songs"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>