<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="4dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/portada_pruebas"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/songnameMV"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/nombre_cancion"
        android:layout_toEndOf="@id/imageMV"
        android:layout_toStartOf="@+id/songDuration"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/songArtistaMV"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/nombre_artista"
        android:layout_toEndOf="@id/imageMV"
        android:layout_toStartOf="@+id/songDuration"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/songDuration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/stat_tv"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginHorizontal="5dp"/>


</RelativeLayout>